2008-11-26  Stefan Kost  <ensonic@users.sf.net>

	* tests/examples/level/level-example.c:
	  Set fakesink to sync. Otherwise people might question the message
	  interval. Nevertheless the timestamp in the message is what matters.

2008-11-25  Wim Taymans  <wim.taymans@collabora.co.uk>

	* tests/icles/.cvsignore:
	cvsignore newly generated file.

2008-11-25  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst/rtp/gstasteriskh263.c:
	* gst/rtp/gstasteriskh263.h:
	* gst/rtp/gstrtpL16depay.c: (gst_rtp_L16_depay_setcaps):
	* gst/rtp/gstrtpL16depay.h:
	* gst/rtp/gstrtpL16pay.c:
	* gst/rtp/gstrtpL16pay.h:
	* gst/rtp/gstrtpac3depay.c: (gst_rtp_ac3_depay_setcaps):
	* gst/rtp/gstrtpac3depay.h:
	* gst/rtp/gstrtpamrdepay.c:
	* gst/rtp/gstrtpamrdepay.h:
	* gst/rtp/gstrtpamrpay.c:
	* gst/rtp/gstrtpamrpay.h:
	* gst/rtp/gstrtpdepay.c:
	* gst/rtp/gstrtpdepay.h:
	* gst/rtp/gstrtpdvdepay.c: (gst_rtp_dv_depay_setcaps):
	* gst/rtp/gstrtpg726depay.c:
	* gst/rtp/gstrtpg726pay.c:
	* gst/rtp/gstrtpg729depay.c:
	* gst/rtp/gstrtpg729pay.c:
	* gst/rtp/gstrtpgsmdepay.c:
	* gst/rtp/gstrtpgsmpay.c: (gst_rtp_gsm_pay_setcaps):
	* gst/rtp/gstrtph263depay.c: (gst_rtp_h263_depay_setcaps):
	* gst/rtp/gstrtph263depay.h:
	* gst/rtp/gstrtph263pay.c:
	* gst/rtp/gstrtph263pay.h:
	* gst/rtp/gstrtph263pdepay.c: (gst_rtp_h263p_depay_setcaps):
	* gst/rtp/gstrtph263pdepay.h:
	* gst/rtp/gstrtph263ppay.c:
	* gst/rtp/gstrtph263ppay.h:
	* gst/rtp/gstrtph264depay.c:
	* gst/rtp/gstrtph264depay.h:
	* gst/rtp/gstrtph264pay.c:
	* gst/rtp/gstrtph264pay.h:
	* gst/rtp/gstrtpilbcdepay.c:
	* gst/rtp/gstrtpilbcpay.c:
	* gst/rtp/gstrtpjpegdepay.h:
	* gst/rtp/gstrtpmp1sdepay.c: (gst_rtp_mp1s_depay_setcaps):
	* gst/rtp/gstrtpmp1sdepay.h:
	* gst/rtp/gstrtpmp2tdepay.c: (gst_rtp_mp2t_depay_setcaps):
	* gst/rtp/gstrtpmp2tdepay.h:
	* gst/rtp/gstrtpmp2tpay.c:
	* gst/rtp/gstrtpmp2tpay.h:
	* gst/rtp/gstrtpmp4adepay.c: (gst_rtp_mp4a_depay_setcaps):
	* gst/rtp/gstrtpmp4apay.c:
	* gst/rtp/gstrtpmp4apay.h: