@@ -1,3 +1,11 @@
+2008-11-27  Wim Taymans  <wim.taymans@collabora.co.uk>
+
+	Patch by: 이문형 <iwings at gmail dot com>
+
+	* gst/rtsp/gstrtspsrc.c: (gst_rtspsrc_loop_udp):
+	Prevent further read/write actions taken to the connect-failed socket by
+	erroring out quickly. See #562258.
+
 2008-11-26  Stefan Kost  <ensonic@users.sf.net>
 
 	* tests/examples/level/level-example.c:
